syntax = "proto3";

package autokitteh.runtimes.v1;

import "autokitteh/program/v1/program.proto";
import "autokitteh/values/v1/values.proto";
import "buf/validate/validate.proto";

message CallWait {
  values.v1.Value call = 1;
  repeated values.v1.Value args = 2 [(buf.validate.field).repeated.items.required = true];
  map<string, values.v1.Value> kwargs = 3 [(buf.validate.field) = {
    required: true,
    map: {
      keys: {
        string: {min_len: 1}
      },
      values: {required: true},
    }
  }];
}

message RunStatus {
  message Idle {}

  message Running {}

  message LoadWait {
    string path = 1 [(buf.validate.field).string.min_len = 1];
  }

  message Completed {
    map<string, values.v1.Value> values = 1 [(buf.validate.field) = {
      required: true,
      map: {
        keys: {
          string: {min_len: 1}
        },
        values: {required: true},
      }
    }];
  }

  message Error {
    repeated program.v1.Error errors = 1 [(buf.validate.field).repeated.items.required = true];
  }

  oneof states {
    option (buf.validate.oneof).required = true;

    Idle idle = 1;
    Running running = 2;
    LoadWait load_wait = 3; // only for modules that are not already compiled.
    CallWait call_wait = 4;
    Completed completed = 5;
    Error error = 6;
  }
}
